# meridian-assistant

./: .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  main.py  production_note.md  pyproject.toml
app/: config.py  db.py  history.py  logger.py  main.py  models.py
app/agents/: chat_models.py  graph.py  streaming.py  tools.py
app/agents/support_agent/: agent.py  prompt.py
app/data_loader/: pipeline.py  retriever.py  store.py
app/routers/: bookings.py  chat.py
app/static/: index.html
data/chroma_db/: chroma.sqlite3
eval/: README.md  benchmark_models.py  run_action.py  run_eval.py  run_judge.py  run_retrieval.py  summary.md  test_set.json
eval/results/: actions.json  judge.json  retrieval.json
eval/results/benchmarks/: actions_google_gemini-2_5-flash.json  actions_moonshotai_kimi-k2_6.json  actions_xiaomi_mimo-v2_5.json  benchmark_20260612T154531.json
